# judiciary_nominations

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: r.yml  test-coverage.yaml
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
.metadata/.plugins/org.jkiss.dbeaver.ui/: dialog_settings.xml
assets/: references.bib
data/: judge_demographic_data.csv  project_database.db.wal
renv/: activate.R
src/: 01_cleaning.py  02_cleaning.sql  genderedHearings.qmd  helper.py  helper.r  pre-processing.R  pre-processing.py  project_script.command  unit_test_execution.r
src/R/: clean_dataframe.R  filter_demographics.R  filter_justices.R  frameify_text.R  interruption_counts.R  transcript_all.R  transcript_clean.R  transcripts_read.R
src/_extensions/andrewheiss/hikmah/: .gitattributes
src/_extensions/andrewheiss/hikmah-manuscript/: .gitattributes
src/_extensions/andrewheiss/hikmah-manuscript/partials/: before-body.tex
src/preProcessing/: loading.py
tests/: test_filter_demographics.r  test_filter_justices.r  test_frameify_text.r  test_interruption_counts.r  test_read_text.py  test_transcripts_read.r
